2008-01-04  Bernhard Walle <bernhard.walle@gmx.de>

	* delete the versions.xml file if parsing was not possible

2008-01-03  Bernhard Walle <bernhard.walle@gmx.de>

	* new option --disable-gui in the configure script
	* if wxGTK is not detected in the configure script, don't build and
	  install the GUI instead of failing to build

2008-01-02  Bernhard Walle <bernhard.walle@gmx.de>

	* add support for checksum testing after download to ensure
	  that the download was correct
	* don't include XML stuff in usbprog headers to fix compilation
	  with some old wxWidgets stuff
	* before reporting that a file is already on disk, check the
	  checksum, if it's wrong, try to download the file again

2008-01-01  Bernhard Walle <bernhard.walle@gmx.de>

	* trace downloading
	* Windows: fix problem that download is corrupted since Windows
	  discriminates between binary and text files and the ios::binary
	  was missing in the download code

2007-12-31  Bernhard Walle <bernhard.walle@gmx.de>

	* GUI: report downloading in status bar
	* CLI: re-discover update devices after upload, and reset the current
	  update device in that case
	* bump version to 0.1.1
	* GUI: implement logfile option

2007-12-30  Bernhard Walle <bernhard.walle@gmx.de>

	* CLI: enable USB debugging in debugging mode (-D)
	* improve debugging functions (Debug class to print debug messages)

2007-12-27  Bernhard Walle <bernhard.walle@gmx.de>

	* fix compilation with gcc 4.3
	* fix libusb detection for old libusb versions that have no .pc file

2007-12-16  Bernhard Walle <bernhard.walle@gmx.de>

	* implemented cache commands in the GUI
	* small corrections in command descriptions
	* added manpages

2007-12-11  Bernhard Walle <bernhard.walle@gmx.de>

	* fixed wrong "firmware file invalid" error in the GUI when specifying
	  a local file for uploading
	* it's now possible to specify a device name for the "device" command
	  instead of the device number

2007-12-10  Bernhard Walle <bernhard.walle@gmx.de>
