@@ -24,6 +24,7 @@
 
 #include <usbprog/firmwarepool.h>
 #include <usbprog/util.h>
+#include <usbprog/stringutil.h>
 
 #include "commands.h"
 #include "configuration.h"
