@@ -8,7 +8,8 @@ pkginclude_HEADERS    = usbprog.h \
 			date.h \
 			firmwarepool.h \
 			devices.h \
-			digest.h
+			digest.h \
+			stringutil.h
 
 lib_LTLIBRARIES       = libusbprog.la
 libusbprog_la_SOURCES  = inifile.cc \
@@ -18,6 +19,7 @@ libusbprog_la_SOURCES  = inifile.cc \
 			 firmwarepool.cc \
 			 devices.cc \
 			 usbprog.cc \
-			 digest.cc
+			 digest.cc \
+			 stringutil.cc
 libusbprog_la_LIBADD   = ../md5/libmd5.a
 libusbprog_la_LDFLAGS  = -version-info 1:0:1
